[project]
name = "francois-feed"
version = "0.1.0"
description = "A tool to generate RSS feeds using Google Gemini API and optionally update GitHub Gists."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.62.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
